# PENGWIN-2026

./: .env.example  .gitignore  data_verification_anatomy.ipynb  data_verification_fractures.ipynb  preprocess_anatomy.py  preprocessing.py  pyproject.toml  test2.py  upload_to_hub.py
Experiment 1/: data_verification.ipynb  preprocess_anatomy.py  upload_to_hub.py
Experiment 1/notebooks/: 01_train_semantic_segmentation.ipynb  02_inference_visualization.ipynb
Experiment 2/: data_verification.ipynb  data_verification_anatomy.ipynb  data_verification_fractures.ipynb  preprocess_anatomy.py  upload_to_hub.py
Experiment 2/notebooks/: 01_train_semantic_segmentation_pelvic.ipynb  02_train_semantic_segmentation_femur.ipynb  03_train_instance_segmentation_csm.ipynb  pengwin-2026-task-1-part-1-verification.ipynb
Experiment 2/preprocess/: preprocess_anatomy.py  preprocess_fractures.py  upload_anatomy.py  upload_fractures.py
data_verification/: data_verification_anatomy.ipynb  data_verification_fractures.ipynb  test.py  test2.py
inference/: Dockerfile  requirements.txt  script.py
notebooks/: 01_train_semantic_segmentation_pelvic.ipynb  02_inference_visualization.ipynb  04_inference_visualization_semantic_segmentation.ipynb
preprocess/: convert_mha_to_nifti.py  make_splits.py  preprocess_anatomy.py  preprocess_fractures.py  splits.json  upload_anatomy.py  upload_fractures.py  upload_nifti.py
training_notebooks/: 01_train_semantic_segmentation_pelvic.ipynb  02_train_semantic_segmentation_femur.ipynb  03_train_instance_segmentation.ipynb
