[project]
name = "pengwin-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.5",
    "dotenv>=0.9.9",
    "nibabel>=5.4.2",
    "simpleitk>=2.5.5",
    "monai>=1.3",
    "torch>=2.0",
    "itk>=5.4.6",
    "matplotlib>=3.10.9",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
